# LECAI

./: .env.example  README.md  pyproject.toml
.streamlit/: secrets.toml
docs/: ai_usage.md  architecture.md  report.md  roadmap.md
eval/: harness.py  judge.py  queries.json
eval/results/: eval_results.json  v1_results.json  v2_results.json
scripts/: clean_corpus.py  trace_query.py
src/agent/: budget.py  graph.py  llm.py  state.py
src/agent/nodes/: answerer.py  executor.py  planner.py  reflector.py
src/agent/prompts/: answerer.py  planner.py  reflector.py
src/api/: server.py
src/app/: streamlit_app.py
src/retrieval/: bm25_index.py  chunker.py  embedder.py  hybrid_searcher.py  ingestor.py  reranker.py  vector_store.py
src/tools/: base.py  document_intelligence.py  market_search.py  partnership_profiler.py  trade_calculator.py  trade_regulations.py
tests/: test_agent_nodes.py  test_budget.py  test_retrieval.py  test_trade_calculator.py  test_trade_regulations.py
